--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,5 +1,8 @@
 Please view this file on the master branch, on stable branches it's out of date.
 
+v 8.8.1
+  - Add documentation for the "Health Check" feature
+  - Allow anonymous users to access a public project's pipelines
 v 8.9.0 (unreleased)
   - Fix builds API response not including commit data
   - Fix error when CI job variables key specified but not defined
